<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="418dp"
        android:layout_height="181dp"
        android:layout_margin="16dp"
        android:src="@drawable/mglogo"
        app:layout_constraintBottom_toTopOf="@id/ageLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/age"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/years"
        android:inputType="number"
        android:textSize="18sp"
        android:textColor="@color/darknavy"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/ageLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ageLabel" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ageEditText" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/genderLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/genderLabel">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="18sp"
            android:textColor="@color/darknavy" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="18sp"
            android:textColor="@color/darknavy" />
    </RadioGroup>

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/height"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderRadioGroup" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cm"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:textColor="@color/darknavy"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/heightLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/heightLabel" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heightEditText" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/kg"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:textColor="@color/darknavy"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/weightLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/weightLabel" />

    <TextView
        android:id="@+id/activityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightEditText" />

    <Spinner
        android:id="@+id/activitySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/darknavy"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/activityLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/activityLabel" />

    <TextView
        android:id="@+id/goalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_goal"
        android:textSize="22sp"
        android:textColor="@color/navy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activitySpinner" />

    <CheckBox
        android:id="@+id/loseWeightCheckbox"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/lose_weight"
        android:textSize="18sp"
        android:textColor="@color/darknavy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalLabel"
        android:layout_width="wrap_content"/>

    <CheckBox
        android:id="@+id/gainMuscleCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/gain_muscle"
        android:textSize="18sp"
        android:textColor="@color/darknavy"
        app:layout_constraintTop_toBottomOf="@id/loseWeightCheckbox"
        app:layout_constraintStart_toEndOf="@id/loseWeightCheckbox"
        app:layout_constraintStart_toStartOf="@id/loseWeightCheckbox" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/cal"
        android:textSize="18sp"
        android:textColor="@color/darknavy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gainMuscleCheckbox" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/blue"
        android:text="@string/clear"
        android:textSize="18sp"
        android:textColor="@color/darknavy"
        app:layout_constraintLeft_toRightOf="@id/calculateButton"
        app:layout_constraintTop_toBottomOf="@id/gainMuscleCheckbox" />

</androidx.constraintlayout.widget.ConstraintLayout>



