<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightblue"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="426dp"
        android:layout_height="306dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/mglogo" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/darknavy"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/navy2"
         android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/startbt"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue"
        android:text="@string/start"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_macros_resources"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/navy"
         android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp" />

    <ListView
        android:id="@+id/myListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/lightblue"
        android:padding="8dp" />

</LinearLayout>
